1591675834 | 36 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_italian.txt,  M content/vrmonitor/translations/vrmonitor_errors_portuguese.txt,  M content/vrmonitor/translations/vrmonitor_errors_tchinese.txt,  M content/vrmonitor/translations/vrmonitor_portuguese.txt,  M content/vrmonitor/translations/vrmonitor_tchinese.txt,  M content/vrmonitor/translations/vrmonitor_ukrainian.txt,  M content/vrmonitor/translations/vrmonitor_vietnamese.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/bindingcallouts.js,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/controllerbindingui.js,  M resources/webinterface/dashboard/deb
https://steamdb.info/patchnotes/5138463/

--- a/content/vrmonitor/translations/vrmonitor_dutch.txt
+++ b/content/vrmonitor/translations/vrmonitor_dutch.txt
@@ -1434,7 +1434,7 @@
 "[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your headset requires a device update to continue using SteamVR.\n\nWould you like to continue?"
 "Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
 "[english]Status_MenuButton_SteamVR_Branch"	"SteamVR %1"
-"MenuAction_KnockKnock"	"Klop klop"
+"MenuAction_KnockKnock"	"Klop, klop"
 "[english]MenuAction_KnockKnock"	"Knock Knock"
 "Settings_NotificationKnockKnock_Text"	"'Klop klop' weergeven"
 "[english]Settings_NotificationKnockKnock_Text"	"Display Knock Knock"
@@ -1442,7 +1442,7 @@
 "[english]Settings_NotificationKnockKnock_Info"	"This lets people get the attention of the person using VR."
 "KnockKnock_Text"	"Ik ben nu in VR. Als je mijn aandacht wilt krijgen, druk dan op de onderstaande knop of druk op de toets '%1'."
 "[english]KnockKnock_Text"	"I'm in VR right now. If you'd like to get my attention please click the button below or press the '%1' key."
-"KnockKnock_Button"	"Klop klop"
+"KnockKnock_Button"	"Klop, klop"
 "[english]KnockKnock_Button"	"Knock Knock"
 "KnockKnock_Notification_Text"	"Klop klop\nIemand buiten VR wil graag je aandacht"
 "[english]KnockKnock_Notification_Text"	"Knock Knock\nSomeone outside VR would like your attention."
@@ -1726,6 +1726,8 @@
 "[english]PlaylistPlayer_All_Checkbox"	"All"
 "PlaylistPlayer_ForceSoundVolume_Checkbox"	"Geluidsvolume forceren"
 "[english]PlaylistPlayer_ForceSoundVolume_Checkbox"	"Force Sound Volume"
+"PlaylistPlayer_PlaySoundBeforeEnd_Checkbox"	"Geluid afspelen voordat invoer eindigt (sec.)"
+"[english]PlaylistPlayer_PlaySoundBeforeEnd_Checkbox"	"Play Sound before entry ends in seconds"
 "PlaylistPlayer_ManualNext_Checkbox"	"Volgende (handmatig)"
 "[english]PlaylistPlayer_ManualNext_Checkbox"	"Manual Next"
 "PlaylistPlayer_Length_Header"	"Lengte"
@@ -1874,6 +1876,8 @@
 "[english]FirmwareWizard_UpdateGenericTracker_Fail_Title"	"Device Update Failed"
 "FirmwareWizard_UpdateGenericTracker_Fail_UpperText"	"Het bijwerken van het volgapparaat is mislukt."
 "[english]FirmwareWizard_UpdateGenericTracker_Fail_UpperText"	"Tracker update failed."
+"FirmwareWizard_UpdateGenericTracker_Fail_MiddleText"	"Zorg ervoor dat je volgapparaat goed via micro-USB met je computer is verbonden. Als dit problemen blijft opleveren, sluit SteamVR dan af. Als je volgapparaat zichzelf niet uitschakelt, schakel deze dan uit door de systeemknop ingedrukt te houden. Start SteamVR hierna weer op en probeer het opnieuw."
+"[english]FirmwareWizard_UpdateGenericTracker_Fail_MiddleText"	"Make sure your tracker is securely connected to your computer by micro-USB. If this continues to fail, quit SteamVR. If your tracker didn't turn off, turn it off by pressing and holding the system button. Then launch SteamVR and try again."
 "FirmwareWizard_UpdateGenericTracker_Fail_LowerText"	"Klik hieronder op 'Opnieuw proberen' om het opnieuw te proberen."
 "[english]FirmwareWizard_UpdateGenericTracker_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateGenericTracker_Success_Title"	"Volgapparaat bijwerken"
@@ -2436,6 +2440,8 @@
 "[english]BS20_ConfigureChannel_ConflictLegend"	"Channel conflict with another Base Station."
 "BS20_ConfigureChannel_ErrorLegend"	"Klik op de kanaallink voor meer informatie."
 "[english]BS20_ConfigureChannel_ErrorLegend"	"Click on channel link for more information."
+"BS20_ConfigureChannel_CancelledConnection"	"Verbinding met %1 geannuleerd. Klik op de kanaallink om het opnieuw te proberen."
+"[english]BS20_ConfigureChannel_CancelledConnection"	"%1 connection cancelled. Click channel link to try again."
 "MessageBox_RemindMeLater"	"Herinner me er later aan"
 "[english]MessageBox_RemindMeLater"	"Remind Me Later"
 "FirmwareWizard_Nag_Title"	"Aanbevolen apparaatupdate"
@@ -2572,8 +2578,14 @@
 "[english]Settings_Audio_Default"	"Default"
 "Settings_Audio_AudioMirrorEnable"	"Audiospiegeling inschakelen"
 "[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"Een onverwachte USB-verbinding met het basisstation verhindert dat de draadloze update voltooid kan worden.<ul><li><font color=#aaaa00>Ontkoppel de stroomkabel van het basisstation.<li>Ontkoppel de USB-kabel die is aangesloten op het basisstation.<li>Sluit alleen de stroomkabel op het basisstation aan.<li>Wacht 30 seconden op het voltooien van de interne update van het basisstation.</font></ul><br>De led van het basisstation kan mogelijk uit staan gedurende de interne update.<br>Wijzig tijdens de update geen enkele aansluiting op het basisstation."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
 "FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"Om door te gaan met bijwerken, dient dit basisstation herstart te worden<br><br><font color=#aaaa00>Verwijder de stroomkabel uit het basisstation en sluit deze daarna opnieuw aan.</font>"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"Volg deze stappen als deze apparaatupdate herhaaldelijk mislukt:<ul><li>Sluit SteamVR af.<li>Koppel USB-kabels die verbonden zijn met het basisstation los.<li>Sluit GEEN USB-kabels op het basisstation aan.<li>Sluit de stroomkabel van de Link Box opnieuw aan.<li>Sluit de stroomkabel van het basisstation opnieuw aan.<li>Start SteamVR en probeer het opnieuw.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"Volg deze stappen als deze apparaatupdate herhaaldelijk mislukt:<ul><li>Sluit SteamVR af.<li>Koppel USB-kabels die verbonden zijn met het basisstation los.<li>Sluit GEEN USB-kabels op het basisstation aan.<li>Sluit de stroomkabel van het basisstation opnieuw aan.<li>Start SteamVR en probeer het opnieuw.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
 "BS_PromotePowerManagement_Title"	"SteamVR"
 "[english]BS_PromotePowerManagement_Title"	"SteamVR"
 "BS_PromotePowerManagement_Explanation"	"SteamVR kan nu het energiebeheer van je basisstations beheren.<br><br>Basisstations die energiebeheer hebben ingeschakeld gaan in slaapstand als SteamVR niet wordt gebruikt en starten weer op als SteamVR start.<br>"
