--- a/content/vrmonitor/translations/vrmonitor_errors_dutch.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_dutch.txt
@@ -603,7 +603,7 @@
 "[english]Explanation_ResetDismissableWarnings"	"Temporary warnings are reset and will show again as needed."
 "Warning_DismissableWarning_OpticalBasestationSyncWarning_Action"	"Meer informatie"
 "[english]Warning_DismissableWarning_OpticalBasestationSyncWarning_Action"	"More info"
-"Warning_DismissableWarning_MissedFrames_Description"	"De huidige VR-applicatie loopt te langzaam, waardoor je mogelijk een slechte ervaring kunt krijgen. Dit kan komen omdat de applicatie te veeleisend is of omdat je computer te langzaam is."
+"Warning_DismissableWarning_MissedFrames_Description"	"De huidige VR-applicatie loopt te langzaam, wat kan resulteren in een slechte ervaring. Dit kan komen omdat de applicatie te veeleisend is of omdat je computer te langzaam is."
 "[english]Warning_DismissableWarning_MissedFrames_Description"	"The current VR application runs too slowly, which can result in a bad experience. This may be because the application is too demanding, or your computer is too slow."
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Header"	"Bluetooth-fout"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Header"	"Bluetooth Error"
@@ -665,7 +665,7 @@
 "[english]WorkshopUpload_Error_SteamClientNotFound"	"Cannot start the SteamVR Workshop Upload Tool because the Steam Client is not running."
 "Popover_BaseStationNoPowerManagement_Header"	"Energiebeheer"
 "[english]Popover_BaseStationNoPowerManagement_Header"	"Power Management"
-"Popover_BaseStationNoPowerManagement_Description"	"Dit basisstation kan niet aan het energiebeheer deelnemen."
+"Popover_BaseStationNoPowerManagement_Description"	"Dit basisstation is niet ontworpen om energiebeheer op afstand te ondersteunen."
 "[english]Popover_BaseStationNoPowerManagement_Description"	"This base station is not designed to support remote power management."
 "VRInitError_Internal_Header"	"SteamVR-fout"
 "[english]VRInitError_Internal_Header"	"SteamVR Fail"
@@ -675,7 +675,7 @@
 "[english]VRInitError_Internal_Action"	"More info"
 "Warning_DismissableWarning_SomeDisplaysAreMirroring_Header"	"Weergavefout"
 "[english]Warning_DismissableWarning_SomeDisplaysAreMirroring_Header"	"Display Error"
-"Warning_DismissableWarning_SomeDisplaysAreMirroring_Description"	"Sommige weergaven zijn ingesteld op het spiegelen van de inhoud. Dit kan invloed hebben op je grafische prestaties of de headsetweergave onbruikbaar maken."
+"Warning_DismissableWarning_SomeDisplaysAreMirroring_Description"	"Je weergave is ingesteld om de inhoud te dupliceren. Dit kan invloed hebben op je grafische prestaties of je headsetweergave onbruikbaar maken."
 "[english]Warning_DismissableWarning_SomeDisplaysAreMirroring_Description"	"Your display appears to be set to duplicate its content. This might impact your graphics performance, or even render your headset's display unusable."
 "Warning_DismissableWarning_UnknownHardwareDetected_Header"	"Nieuw apparaat gedetecteerd"
 "[english]Warning_DismissableWarning_UnknownHardwareDetected_Header"	"New Device Detected"
@@ -717,13 +717,13 @@
 "[english]Warning_DismissableWarning_Windows8_Description"	"SteamVR is not supported on Windows 8. Please upgrade to Windows 8.1 or Windows 10 for the best results."
 "Warning_DismissableWarning_DisplayInExtendedMode_Header"	"Opmerking voor headset"
 "[english]Warning_DismissableWarning_DisplayInExtendedMode_Header"	"Headset Notice"
-"Warning_DismissableWarning_DisplayInExtendedMode_Description"	"De uitgebreide modus wordt niet aanbevolen. Schakel over naar de directe modus voor de beste resultaten."
+"Warning_DismissableWarning_DisplayInExtendedMode_Description"	"SteamVR heeft gedetecteerd dat je headset als monitor wordt gebruikt. Schakel over naar de directe weergavemodus voor de beste resultaten."
 "[english]Warning_DismissableWarning_DisplayInExtendedMode_Description"	"SteamVR has detected your headset running as a monitor. For best results, please switch to Direct Display Mode."
 "Warning_DismissableWarning_DisplayInExtendedMode_Action"	"Directe weergavemodus aan"
 "[english]Warning_DismissableWarning_DisplayInExtendedMode_Action"	"Enable Direct Display Mode"
 "VRInitError_Driver_TrackedDeviceInterfaceUnknown_Header"	"Apparaatfout"
 "[english]VRInitError_Driver_TrackedDeviceInterfaceUnknown_Header"	"Device Error"
-"VRInitError_Driver_TrackedDeviceInterfaceUnknown_Description"	"Het stuurprogramma dat wordt gebruikt door  deze headset is niet compatibel met deze versie van SteamVR."
+"VRInitError_Driver_TrackedDeviceInterfaceUnknown_Description"	"Het stuurprogramma dat door dit apparaat wordt gebruikt is niet compatibel met deze versie van SteamVR."
 "[english]VRInitError_Driver_TrackedDeviceInterfaceUnknown_Description"	"The driver used by this device is not compatible with this version of SteamVR."
 "VRInitError_Driver_TrackedDeviceInterfaceUnknown_Action"	"Meer informatie"
 "[english]VRInitError_Driver_TrackedDeviceInterfaceUnknown_Action"	"More info"
@@ -791,13 +791,13 @@
 "[english]Warning_DismissableWarning_IssuesWithOneDongle_Action"	"More info"
 "Warning_DismissableWarning_IssuesWithTwoDongles_Header"	"Geen draadloze ontvangers gevonden"
 "[english]Warning_DismissableWarning_IssuesWithTwoDongles_Header"	"Wireless Receivers Not Detected"
-"Warning_DismissableWarning_IssuesWithTwoDongles_Description"	"De draadloze ontvangers in je Vive-headset worden niet gedetecteerd."
+"Warning_DismissableWarning_IssuesWithTwoDongles_Description"	"De draadloze ontvangers in je headset worden niet gedetecteerd. Dit kan tot verbindingsproblemen met je VR-controllers leiden."
 "[english]Warning_DismissableWarning_IssuesWithTwoDongles_Description"	"The wireless receivers in your headset were not detected. This can cause connection issues with your VR controllers."
 "Warning_DismissableWarning_IssuesWithTwoDongles_Action"	"Meer informatie"
 "[english]Warning_DismissableWarning_IssuesWithTwoDongles_Action"	"More info"
 "VRInitError_Driver_HmdDisplayMirrored_Header"	"Headsetweergave gespiegeld"
 "[english]VRInitError_Driver_HmdDisplayMirrored_Header"	"Headset display mirrored"
-"VRInitError_Driver_HmdDisplayMirrored_Description"	"Het scherm van de headset kon niet worden gevonden, maar er is een gespiegeld beeld gedetecteerd. Stel de HMD in op 'uitgebreid' in plaats van 'gespiegeld'."
+"VRInitError_Driver_HmdDisplayMirrored_Description"	"Het scherm van de headset kon niet worden gevonden, maar er is een gespiegeld beeld gedetecteerd. Stel de headset in op 'uitgebreid' in plaats van 'gespiegeld'."
 "[english]VRInitError_Driver_HmdDisplayMirrored_Description"	"The headset's display was not found, but a mirrored display was detected.  Please set the headset to extended mode rather than mirrored."
 "VRInitError_Driver_HmdDisplayMirrored_FirstAction"	"Beeldschermeigenschappen tonen"
 "[english]VRInitError_Driver_HmdDisplayMirrored_FirstAction"	"View display properties"
@@ -829,7 +829,7 @@
 "[english]Popover_LowBattery_Tracker_Description"	"This tracker's battery is low."
 "VRInitError_Compositor_FirmwareRequiresUpdate_Header"	"Tijd voor een update"
 "[english]VRInitError_Compositor_FirmwareRequiresUpdate_Header"	"Time to Update"
-"VRInitError_Compositor_FirmwareRequiresUpdate_Description"	"Je headset is gedetecteerd, maar deze vereist een verplichte firmware-update om goed te kunnen werken."
+"VRInitError_Compositor_FirmwareRequiresUpdate_Description"	"Je headset is gedetecteerd, maar deze vereist een update om goed te kunnen werken."
 "[english]VRInitError_Compositor_FirmwareRequiresUpdate_Description"	"Your headset is detected, but requires an update to ensure correct operation."
 "VRInitError_Compositor_FirmwareRequiresUpdate_Action"	"Headset bijwerken"
 "[english]VRInitError_Compositor_FirmwareRequiresUpdate_Action"	"Update Headset"
@@ -839,7 +839,7 @@
 "[english]Popover_LowBattery_HMD_Description"	"This headset's battery is low."
 "VRInitError_Compositor_UnableToCreateDevice_Header"	"SteamVR-graphicsfout"
 "[english]VRInitError_Compositor_UnableToCreateDevice_Header"	"SteamVR Graphics Error"
-"VRInitError_Compositor_UnableToCreateDevice_Description"	"De compositor kon geen graphicsapparaat maken als onderdeel van de initialisatie."
+"VRInitError_Compositor_UnableToCreateDevice_Description"	"Je dient het grafische stuurprogramma van je computer mogelijk bij te werken."
 "[english]VRInitError_Compositor_UnableToCreateDevice_Description"	"You may need to update your computer's graphics driver."
 "VRInitError_Compositor_UnableToCreateDevice_Action"	"Meer informatie"
 "[english]VRInitError_Compositor_UnableToCreateDevice_Action"	"More info"
@@ -885,7 +885,7 @@
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_ActionURL"	"vrmonitor://firmwareupdate/"
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Instelfout basisstation"
 "[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Base Station Setup Error"
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"Er zijn twee basisstations gelijktijdig op kanaal %1 aangemeld. Voor de beste resultaten gebruik je unieke kanalen voor alle basisstations die zijn aangemeld."
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"SteamVR heeft gedetecteerd dat er meerdere basisstations gelijktijdig op kanaal %1 zijn aangemeld. Voor de beste resultaten gebruik je unieke kanalen voor alle basisstations die zijn aangemeld."
 "[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"SteamVR has detected multiple bases set to channel %1. For best results, use unique channels for all bases that can be seen at the same time."
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configureren"
 "[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configure"
