--- a/content/vrmonitor/translations/vrmonitor_errors_italian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_italian.txt
@@ -955,7 +955,7 @@
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Safe Mode"
 "Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>A causa</span> di un crash recente, SteamVR è stato avviato in modalità sicura.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Ulteriori informazioni</a>."
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Due</span> to a recent crash, SteamVR is currently operating in Safe Mode.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
-"Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Disabilita la modalità sicura"
+"Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Disattiva modalità sicura"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Disable Safe Mode"
 "Warning_DismissableWarning_SteamVRInSafeMode_ActionURL"	"vrmonitor://safemode/disable"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_ActionURL"	"vrmonitor://safemode/disable"
@@ -965,7 +965,7 @@
 "[english]Warning_DismissableWarning_SteamVRUpdated_Header"	"SteamVR Update"
 "Warning_DismissableWarning_SteamVRUpdated_Description"	"SteamVR è stato aggiornato alla versione %2."
 "[english]Warning_DismissableWarning_SteamVRUpdated_Description"	"SteamVR has been updated to version %2."
-"Warning_DismissableWarning_SteamVRUpdated_Action"	"Scopri cosa è cambiato"
+"Warning_DismissableWarning_SteamVRUpdated_Action"	"Lista cambiamenti"
 "[english]Warning_DismissableWarning_SteamVRUpdated_Action"	"See what changed"
 "Warning_DismissableWarning_SteamVRUpdated_ActionURL"	"%1"
 "[english]Warning_DismissableWarning_SteamVRUpdated_ActionURL"	"%1"
