--- a/content/vrmonitor/translations/vrmonitor_errors_tchinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_tchinese.txt
@@ -591,9 +591,9 @@
 "[english]VRInitError_Init_NotAvailableToUtilityApps_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Init_NotAvailableToUtilityApps_Action"	"聯絡 SteamVR 客服"
 "[english]VRInitError_Init_NotAvailableToUtilityApps_Action"	"More info"
-"Warning_DismissableWarning_WarningsForTheFirstTime_Header"	"首次警告"
+"Warning_DismissableWarning_WarningsForTheFirstTime_Header"	"裝置資訊"
 "[english]Warning_DismissableWarning_WarningsForTheFirstTime_Header"	"Device Info"
-"Warning_DismissableWarning_MissedFrames_Header"	"應用程式執行速度太慢"
+"Warning_DismissableWarning_MissedFrames_Header"	"應用程式錯誤"
 "[english]Warning_DismissableWarning_MissedFrames_Header"	"Application Error"
 "Explanation_RemoveAllSteamVRUSBDevices"	"從該系統中移除所有與 SteamVR 相關的 USB 裝置以重新安裝驅動。"
 "[english]Explanation_RemoveAllSteamVRUSBDevices"	"Remove all USB devices related to SteamVR from this system to reinstall their drivers."
@@ -661,7 +661,7 @@
 "[english]Settings_PowerOffBaseStations_Text"	"Put Base Station in Standby mode when VR is not in use"
 "WorkshopUpload_Error_SteamClientNotFound"	"Steam 用戶端未運行，因此無法執行 SteamVR 工作坊上傳工具。"
 "[english]WorkshopUpload_Error_SteamClientNotFound"	"Cannot start the SteamVR Workshop Upload Tool because the Steam Client is not running."
-"Popover_BaseStationNoPowerManagement_Header"	"無電源管理"
+"Popover_BaseStationNoPowerManagement_Header"	"電源管理"
 "[english]Popover_BaseStationNoPowerManagement_Header"	"Power Management"
 "Popover_BaseStationNoPowerManagement_Description"	"此定位器無法使用電源管理。"
 "[english]Popover_BaseStationNoPowerManagement_Description"	"This base station is not designed to support remote power management."
@@ -709,7 +709,7 @@
 "[english]VRInitError_IPC_ServerInitFailed_FirstAction"	"Reset Headset"
 "Popover_Off_Controller_FirstAction"	"配對控制器"
 "[english]Popover_Off_Controller_FirstAction"	"Pair Controller"
-"Warning_DismissableWarning_Windows8_Header"	"已偵測到 Windows 8"
+"Warning_DismissableWarning_Windows8_Header"	"是時候升級 Windows"
 "[english]Warning_DismissableWarning_Windows8_Header"	"Time to update Windows"
 "Warning_DismissableWarning_Windows8_Description"	"SteamVR 不支援 Windows 8。請升級到 Windows 8.1 或 Windows 10 以得到最佳效果。"
 "[english]Warning_DismissableWarning_Windows8_Description"	"SteamVR is not supported on Windows 8. Please upgrade to Windows 8.1 or Windows 10 for the best results."
@@ -863,7 +863,7 @@
 "[english]Warning_DismissableWarning_NewDriverInstalled_Header"	"Device Update Pending"
 "Warning_DismissableWarning_NewDriverInstalled_Description"	"您需要重新啟動 SteamVR 以啟用您的新驅動程式。"
 "[english]Warning_DismissableWarning_NewDriverInstalled_Description"	"Please Restart SteamVR to use your updated device."
-"Warning_DismissableWarning_NewDriverInstalled_Action"	"重新啟動"
+"Warning_DismissableWarning_NewDriverInstalled_Action"	"重新啟動 SteamVR"
 "[english]Warning_DismissableWarning_NewDriverInstalled_Action"	"Restart SteamVR"
 "VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"需要最新版 Windows 10"
 "[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows 10 Update"
@@ -921,7 +921,7 @@
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Description"	"Please plug your headset into the same graphics card as your primary monitor."
 "Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Action"	"　"
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Action"	"More info"
-"Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	"　"
+"Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"升級顯示卡驅動程式"
 "[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Upgrade Graphics Driver"
@@ -929,7 +929,7 @@
 "[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"SteamVR performs best with an up-to-date graphics driver. We recommend that you update yours now."
 "Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"下載驅動程式"
 "[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Action"	"More info"
-"Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://www.nvidia.com/Download/index.aspx?lang=tw"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#steamvr-issues"
 "[english]Warning_DismissableWarning_UpgradeGraphicsDriver_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#steamvr-issues"
 "Error_NoCompositorAvailable_ActionURL"	"vrmonitor://restartsystem"
 "[english]Error_NoCompositorAvailable_ActionURL"	"vrmonitor://restartsystem"
@@ -951,7 +951,7 @@
 "[english]VRInitError_Driver_HmdDriverIdOutOfBounds_FirstActionURL"	"vrmonitor://reboothmd"
 "VRInitError_IPC_ServerInitFailed_FirstActionURL"	"vrmonitor://reboothmd"
 "[english]VRInitError_IPC_ServerInitFailed_FirstActionURL"	"vrmonitor://reboothmd"
-"Warning_DismissableWarning_SteamVRInSafeMode_Header"	"安全模式的 SteamVR"
+"Warning_DismissableWarning_SteamVRInSafeMode_Header"	"安全模式"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Safe Mode"
 "Warning_DismissableWarning_SteamVRInSafeMode_Description"	"由於最近發生當機，SteamVR 目前是以安全模式執行。在此模式下只會載入信任的驅動程式以避免相容性問題。"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Due</span> to a recent crash, SteamVR is currently operating in Safe Mode.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
