--- a/content/vrmonitor/translations/vrmonitor_tchinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_tchinese.txt
@@ -145,7 +145,7 @@
 "[english]SteamVRSystemState_Ready"	"Now Playing"
 "SteamVRSystemState_NotReady"	"未就绪"
 "[english]SteamVRSystemState_NotReady"	" "
-"SteamVRSystemState_Connecting"	"正在連線"
+"SteamVRSystemState_Connecting"	"搜尋中…"
 "[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"關機"
 "[english]SteamVRSystemState_Shutdown"	"Exiting VR..."
@@ -1847,7 +1847,7 @@
 "[english]MenuAction_PairTracker"	"Pair Tracker"
 "MenuAction_PowerOffTracker"	"關閉追蹤器電源"
 "[english]MenuAction_PowerOffTracker"	"Turn Off Tracker"
-"Advanced_Generic_Tracker"	"定位器"
+"Advanced_Generic_Tracker"	"追蹤器"
 "[english]Advanced_Generic_Tracker"	"Tracker"
 "FirmwareWizard_UpdateGenericTracker_Start_Title"	"更新追蹤器韌體"
 "[english]FirmwareWizard_UpdateGenericTracker_Start_Title"	"Update Tracker"
