--- a/content/vrmonitor/translations/vrmonitor_errors_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_english.txt
@@ -874,9 +874,12 @@
 "Warning_DismissableWarning_DevelopmentHardwareNotSupported_Action" " "
 "Warning_DismissableWarning_DevelopmentHardwareNotSupported_ActionURL" " "
 
-"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Header" "Set SteamVR as the default OpenXR runtime?"
-"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Description" "SteamVR isn't set as the default OpenXR runtime. This might prevent some applications from launching correctly."
-"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Action" "Set SteamVR as default"
+"Warning_OpenXRDefaultRuntimePrompt_NotSet" "The OpenXR runtime is not currently set."
+"Warning_OpenXRDefaultRuntimePrompt_AnotherSteamVR" "The OpenXR runtime is currently set to another version of SteamVR."
+
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Header" "SteamVR isn't set as the default OpenXR runtime."
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Description" "This might prevent some applications from launching correctly. %1"
+"Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_Action" "Set as default"
 "Warning_DismissableWarning_OpenXRDefaultRuntimePrompt_ActionURL" "vrmonitor://openxr/makedefault"
 
 "VRInitError_Compositor_FailedToCreateDirectModeDisplay_Header" "Display Connection Trouble"
