--- a/content/vrmonitor/translations/vrmonitor_portuguese.txt
+++ b/content/vrmonitor/translations/vrmonitor_portuguese.txt
@@ -1096,7 +1096,7 @@
 "[english]MenuAction_ForceFirmware"	"Force Firmware"
 "MenuAction_DirectMode"	"Modo de Visualização Direta"
 "[english]MenuAction_DirectMode"	"Direct Display Mode"
-"MenuAction_EnableDirectMode"	"Ativar Visualização Direta"
+"MenuAction_EnableDirectMode"	"Visualização Direta"
 "[english]MenuAction_EnableDirectMode"	"Enable Direct Display Mode"
 "MenuAction_DisableDirectMode"	"Desativar Visualiz. Direta"
 "[english]MenuAction_DisableDirectMode"	"Disable Direct Display Mode"
