1591853506 | 31 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M content/vrmonitor/translations/vrmonitor_polish.txt,  M content/vrmonitor/translations/vrmonitor_portuguese.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M drivers/lighthouse/resources/webinterface/pairing.js,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/bindingcallouts.js,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/controllerbindingui.js,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/debugcommands.js,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/fallback.js,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/keyboard.js,  M resources/webinterface/dashboard/localization/vrmonitor_english.json,  M resources/webinterface/dashboard/messageoverlay.html,  M resources/webinterface/dashboard/messag
https://steamdb.info/patchnotes/5148905/

--- a/content/vrmonitor/translations/vrmonitor_polish.txt
+++ b/content/vrmonitor/translations/vrmonitor_polish.txt
@@ -1052,7 +1052,7 @@
 "[english]DismissableWarning_RunTutorialAgain"	"Run Tutorial Again (0x0001)"
 "DismissableWarning_BasestationsTooFarApart"	"Stacje bazowe są zbyt daleko od siebie (0x0002)"
 "[english]DismissableWarning_BasestationsTooFarApart"	"Base Stations too far apart (0x0002)"
-"DismissableWarning_DismissButton"	"Odrzuć"
+"DismissableWarning_DismissButton"	"Zamknij"
 "[english]DismissableWarning_DismissButton"	"Dismiss"
 "DismissableWarning_OpticalBasestationSyncWarning"	"Ostrzeżenie o synchronizacji wizualnej stacji bazowych (0x0004)"
 "[english]DismissableWarning_OpticalBasestationSyncWarning"	"Optical Base Station Sync Warning (0x0004)"
